# esp-idf_nim_template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.nims  esp_idf_nim_template.nimble  esptarget.nims
main/: CMakeLists.txt  libnim.nim  main.c
